--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "requirejs-test-setup",
+  "name": "requirejs-test-boilerplate",
   "version": "1.0.0",
   "authors": [
     "Florian Biewald <f.biewald@googlemail.com>"
